# Bookshelf-API

./: .env  .env-non-dev  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  grafana-dashboard.json  prometheus.yml  pyproject.toml  pyprojects.toml  pytest.ini  requirements.txt  users.sqlite3
autotests/: conftest.py  settings.py
autotests/clients/rest/: base_client.py  exceptions.py
autotests/clients/rest/users/: client.py  models.py
autotests/flow/: test_users.py
autotests/rest/users/: test_users.py
src/: cli.py  config.py  db.py  exceptoins.py  main.py
src/admin_panel/: auth.py  views.py
src/books/: cli.py  dao.py  models.py  routers.py  settings.py  shemas.py
src/books/api/: cli.py  router.py  service.py
src/books/authors/: dao.py  models.py  routers.py  shemas.py
src/books/categorys/: dao.py  models.py  routers.py  shemas.py
src/books/database/: cli.py  models.py  service.py
src/common/api/: service.py  settings.py  uvicorn_service.py
src/common/database/: cli.py  service.py  settings.py
src/common/jwt/: __init__.py  methods.py  models.py  settings.py
src/common/utils/: rsa256.py
src/dao/: base_dao.py
src/migrations/: env.py
src/migrations/versions/: 12b9b09f5941_initall.py  622234bef7c1_init.py  7ab61c976d3b_initall.py  b1deacda99c6_ini.py  be4c74fbf090_initall.py
src/test/: conftest.py  mock_authors.json  mock_books.json  mock_categorys.json  mock_users.json
src/users/: README.md  __init__.py  auth.py  cli.py  dao.py  dependencies.py  models.py  routers.py  settings.py  shemas.py
src/users/api/: cli.py  health.py  router.py  service.py
src/users/database/: cli.py  models.py  service.py
tests/common/database/: conftest.py  test_common_database_service.py
tests/users/: conftest.py
tests/users/database/: conftest.py  test_users_database_service.py
(+31 files in other folders)
