[tool.poetry]
name = "bookshelf-api"
version = "0.1.0"
description = ""
authors = ["Alexander Platonov <sasa20sasha19910@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
typer = "^0.9.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
aiosqlite = { version = "^0.19.0", optional = true }
facet = "^0.10.0"
cryptography = "^41.0.7"
jwt = "^1.3.1"
pydantic = {extras = ["email"], version = "^2.5.3"}

[tool.poetry.extras]
sqlite = ["aiosqlite"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
