[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alexander Platonov <sasa20sasha19910@yandex.ru>"]
readme = "README.md"
include = [
  "src",
]

[tool.poetry.dependencies]
# extras
asyncpg = { version = "^0.28.0", optional = true }
aiosqlite = { version = "^0.19.0", optional = true }

# main
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
typer = {version = "^0.9.0", extras = ["all"]}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
facet = "^0.10.0"
cryptography = "^41.0.7"
jwt = "^1.3.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
httpx = "^0.26.0"
pyyaml = "^6.0.1"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
faker = "^22.5.0"
pytest-dependency = "^0.6.0"
pytest-lazy-fixture = "^0.6.3"
pylint = "^3.0.3"
pylint-quotes = "^0.2.3"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
